# syslog-ng-incubator

./: .travis.yml  configure.ac
modules/: Makefile.am
modules/journal/: Makefile.am  journal-source-example.conf  journal-source-grammar.ym  journal-source-parser.c  journal-source-parser.h  journal-source-plugin.c  journal-source.c  journal-source.h
modules/websocket/: Makefile.am  websocket-grammar.ym  websocket-parser.c  websocket-parser.h  websocket-plugin.c  websocket.c  websocket.h
modules/zmq/: Makefile.am  zmq-destination.c  zmq-destination.h  zmq-grammar.ym  zmq-module.h  zmq-parser.c  zmq-parser.h  zmq-plugin.c  zmq-plugin.h  zmq-source.c  zmq-source.h  zmq-transport.c  zmq-transport.h  zmq_install.sh
modules/zmq/scripts/: pub  pusher.c  sub  subscriber.c  syslog-ng.conf  syslog-ng.conf_port4444  syslog-ng.conf_port44444  syslog-ng.conf_port44445  zmq_test.sh
modules/zmq/tests/: control.py  globals.py  test_client.py  test_server.py  test_zmq.c  tests.py  zmq_client.py  zmq_server.py
modules/zmq/tests/integration/: persist  syslog-ng-destination.conf  syslog-ng-destination.origin  syslog-ng-source.conf  test_file  test_result_source  test_zmq.py
modules/zmq/tests/performance/: perf_test.py  persist  slng-test.conf  slng.conf  source_file  test-persist  test_result
